[Fix] iOS overflow bug and improve performance on Safari.

--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -153,7 +153,7 @@
         width: 100%;
         padding: 1rem 0;
         padding-top: 8rem;
-        
+
         & + h2.subtitle {
           position: absolute;
         }
@@ -192,9 +192,9 @@
     @media screen and (max-width: 475px) {
       margin: 2.5rem 0;
     }
-    
+
     &:before {
-      content: '．．．．．';
+      content: "．．．．．";
       font-size: 24px;
       font-weight: 700;
       color: $dark-2;
