--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,3 @@
 @import "article";
 @import "author";
 @import "footer";
-
-body {
-  overflow-x: hidden;
-}
